# sovd-playground

./: .dockerignore  .gitignore  .gitmessage  .markdownlint.yaml  .pre-commit-config.yaml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  cliff.toml  clippy.toml  pyproject.toml  rustfmt.toml  test_proxy.sh
.github/: WORKFLOWS.md  labeler.yaml  labeler.yml
.github/workflows/: build.yaml  check-labeler.yaml  ci.yaml  ci.yml  coverage.yaml  deploy.yaml  first-interaction.yaml  integration-tests.yaml  labeler.yaml  latest.yaml  nightly.yaml  pre-commit.yaml  release.yaml  release.yml  tests.yaml
assets/: README.md  index.html  vue.global.js
assets/assets/: index-BaM65hj0.js  index-BvVqiLoW.css  index-C9eEm3o4.js  index-xRa8shER.js
assets/css/: app.css
assets/js/: app.js  vue.global.js
doc/: architecture.md
docker/: Dockerfile  entrypoint.sh
examples/: Cargo.toml  sampler.yaml
examples/diagnostic/: subscribe-events.rs
examples/server/: dynamic.rs  shutdown.rs  simple.rs  systemd.rs  unix.rs  utilization.rs
examples/src/: lib.rs
opensovd-cli/: Cargo.toml  README.md  build.rs
opensovd-cli/cli/src/: main.rs
opensovd-cli/gateway/src/: cli.rs  main.rs
opensovd-cli/libosovd/src/: args.rs  lib.rs  version.rs
opensovd-cli/osovd-cli/src/: main.rs
opensovd-cli/osovd-gateway/: config.toml
opensovd-cli/osovd-gateway/src/: cli.rs  config.rs  hashmap_data_resource.rs  main.rs
opensovd-client/: Cargo.toml  README.md
opensovd-client/src/: client.rs  client_config.rs  error.rs  lib.rs
opensovd-diagnostic/: Cargo.toml
opensovd-diagnostic/src/: diagnostic.rs  entities.rs  lib.rs  metrics.rs  resources.rs
opensovd-diagnostic/src/entities/: component.rs
opensovd-diagnostic/src/middleware/: cache.rs  logging.rs  mod.rs  retry.rs
opensovd-diagnostic/src/registry/: mod.rs  resolvers.rs
opensovd-diagnostic/src/resources/: data.rs  hashmap_data.rs  hashmap_data_resource.rs  local.rs  mod.rs  remote.rs
opensovd-models/: Cargo.toml  README.md
opensovd-models/src/: data.rs  entity.rs  error.rs  lib.rs  version.rs
opensovd-models/src/data/: category.rs  error.rs  item.rs
opensovd-server/: Cargo.toml  README.md
opensovd-server/src/: convert.rs  error.rs  lib.rs  middleware.rs  response.rs  routes.rs  server.rs  server_actix.rs  server_config.rs  ui.rs
opensovd-server/src/middleware/: auth.rs  tracing.rs
opensovd-server/src/routes/: data.rs  entity.rs  hello.rs  metrics.rs  proxy.rs  ui.rs  version.rs
opensovd-tracing/: Cargo.toml  README.md
opensovd-tracing/src/: lib.rs
scripts/: README.md  check-labeler.sh  mkcerts.sh  mkjwt.sh  update-assets.sh
sovd/: Cargo.toml  README.md
sovd-cli/: Cargo.toml  README.md  build.rs
sovd-cli/gateway/: config.toml
sovd-cli/gateway/src/: cli.rs  components.rs  config.rs  main.rs  mock.rs
sovd-cli/libsovd/src/: args.rs  lib.rs  version.rs
sovd-diagnostic/: Cargo.toml
sovd-diagnostic/src/: data.rs  diagnostic.rs  entities.rs  lib.rs  repository.rs
sovd-models/: Cargo.toml  README.md
sovd-models/src/: data.rs  entity.rs  error.rs  lib.rs  version.rs
sovd-server/: Cargo.toml  README.md
sovd-server/src/: convert.rs  error.rs  lib.rs  response.rs  server.rs  server_config.rs
sovd-server/src/middleware/: auth.rs  mod.rs  tracing.rs
sovd-server/src/routes/: data.rs  discovery.rs  mod.rs  root.rs  ui.rs  version.rs
sovd-ui/: .prettierrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
sovd-ui/sovdlab-ui/: package-lock.json
sovd-ui/src/: App.vue  constants.ts  main.ts  style.css
sovd-ui/src/components/: AuthenticationModal.vue  Breadcrumbs.vue  ComponentDetails.vue  ComponentTree.vue  KeyboardHelpModal.vue  ResourceDetails.vue  ResourceIcon.vue  ResourceLabel.vue  ServerBanner.vue  TheHeader.vue  Toast.vue
sovd-ui/src/components/generic/: InfoCard.vue  InfoCardRow.vue  TreeView.vue  TreeViewContext.ts  TreeViewNode.vue
sovd-ui/src/services/: ApiService.ts  AuthService.ts  NotificationService.ts  SovdService.ts  TelemetryService.ts
sovd-ui/src/util/: jwt.ts  string.ts
sovd/src/: lib.rs  models.rs
sovd/src/models/: version.rs
tests/: README.md  __init__.py  conftest.py  test_gateway_basic.py  test_gateway_certs.py  test_gateway_jwt.py  test_gateway_proxy.py
tests/ui/: README.md  conftest.py  test_basic_ui.py
