[workspace]
members = [
    "opensovd-models",
    "opensovd-client",
    "opensovd-server",
    "opensovd-cli",
    "opensovd-tracing",
    "opensovd-diagnostic",
]
resolver = "2"

[workspace.package]
authors = ["Sanimir Agovic <sanimig.agovic@liebherr.com>"]
description = "SOVD (ISO 17978) implementation"
edition = "2024"
homepage = "https://projects.eclipse.org/projects/automotive.opensovd"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/eclipse-opensovd/opensovd-core"
version = "0.0.1"

[workspace.dependencies]
opensovd-models = { version = "0.0.1", path = "opensovd-models" }
opensovd-diagnostic = { version = "0.0.1", path = "opensovd-diagnostic" }

opensovd-client = { version = "0.0.1", path = "opensovd-client" }
opensovd-server = { version = "0.0.1", path = "opensovd-server" }
opensovd-tracing = { version = "0.0.1", path = "opensovd-tracing" }

serde = { version = "1.0.219", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.133", default-features = false, features = [
    "alloc",
] }
clap = { version = "4.5.42", default-features = false, features = [
    "cargo",
    "derive",
    "help",
    "std",
    "usage",
] }
tokio = { version = "1.47.0", features = [
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "time",
    "macros",
], default-features = false }
actix-web = { version = "4.9.0", default-features = false, features = [
    "macros",
] }
actix-files = { version = "0.6.6", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", features = [
    "alloc",
    "fmt",
], default-features = false }
tracing-log = { version = "0.2.0", default-features = false }
log = { version = "0.4", default-features = false }
openssl = { version = "0.10.73", default-features = false }
futures-core = { version = "0.3.31", default-features = false, features = [
    "alloc",
] }
derive_more = { version = "2.0", default-features = false }

http = { version = "1.1", default-features = false, features = ["std"] }
schemars = { version = "1.0.4", default-features = false }
hyper = { version = "1.7.0", default-features = false }
hyper-util = { version = "0.1.16", default-features = false }
http-body-util = { version = "0.1", default-features = false }
url = { version = "2.5", default-features = false }
urlencoding = { version = "2.1", default-features = false }
hyper-openssl = { version = "0.10", default-features = false }
tokio-openssl = { version = "0.6", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
