# SPDX-FileCopyrightText: Copyright Liebherr-Digital Development Center GmbH
# SPDX-License-Identifier: Apache-2.0

[package]
name = "examples"
description = "SOVD examples"
publish = false

edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[[example]]
name = "simple-server"
path = "server/simple.rs"

[[example]]
name = "dynamic-server"
path = "server/dynamic.rs"

[[example]]
name = "shutdown-server"
path = "server/shutdown.rs"

[[example]]
name = "unix-server"
path = "server/unix.rs"

[[example]]
name = "subscribe-events"
path = "diagnostic/subscribe-events.rs"

[[example]]
name = "systemd-server"
path = "server/systemd.rs"

[dependencies]
sovd-diagnostic = { workspace = true }
sovd-server = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = { version = "0.4", default-features = false }
