[package]
name = "opensovd-cli"
description = "Cli tools for opensovd"
readme = "README.md"
build = "build.rs"

edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[features]
default = ["tracing", "jsonschema-schemars", "openssl"]
tracing = [
    "opensovd-tracing/tracing",
    "dep:tracing",
    "dep:tracing-subscriber",
    "tracing-log/log-tracer",
    "log/std",
]
ui = ["opensovd-server/ui"]
jsonschema-schemars = ["schemars/derive", "opensovd-models/jsonschema-schemars"]
openssl = ["opensovd-client/openssl", "opensovd-server/openssl", "dep:openssl"]

[[bin]]
name = "osovd-gateway"
path = "osovd-gateway/src/main.rs"

[[bin]]
name = "osovd-cli"
path = "osovd-cli/src/main.rs"

[lib]
name = "libosovd"
path = "libosovd/src/lib.rs"

[dependencies]
clap = { workspace = true }
opensovd-client = { workspace = true }
opensovd-diagnostic = { workspace = true }
opensovd-server = { workspace = true, features = ["openssl"] }
opensovd-tracing = { workspace = true }
opensovd-models = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
openssl = { workspace = true, optional = true }
serde_json = { workspace = true }
url = "2.5"
urlencoding = "2.1"
serde = { workspace = true }
schemars = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
    "smallvec",
] }
tracing-log = { workspace = true, optional = true }
log = { workspace = true, optional = true }

derive_more = { workspace = true, features = ["display", "from"] }
