[package]
name = "opensovd-cli"
description = "Cli tools for opensovd"
readme = "README.md"
build = "build.rs"

edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[features]
default = [
    "jsonschema-schemars",
    "openssl",
    "config-entities",
]
config = [
    "dep:toml",
]
config-entities = [
    "config",
]
ui = [
    "opensovd-server/ui",
]
jsonschema-schemars = [
    "schemars/derive",
    "opensovd-models/jsonschema-schemars",
]
openssl = [
    "opensovd-client/openssl",
    "opensovd-server/openssl",
    "dep:openssl",
]

[[bin]]
name = "osovd-gateway"
path = "osovd-gateway/src/main.rs"

[[bin]]
name = "osovd-cli"
path = "osovd-cli/src/main.rs"

[lib]
name = "libosovd"
path = "libosovd/src/lib.rs"

[dependencies]
clap = { workspace = true }
opensovd-client = { workspace = true }
opensovd-diagnostic = { workspace = true }
opensovd-server = { workspace = true, features = [
    "openssl",
] }
opensovd-models = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
] }
http = { workspace = true }
openssl = { workspace = true, optional = true }
serde_json = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true, optional = true }
url = "2.5"
urlencoding = "2.1"
derive_more = { workspace = true, features = [
    "display",
    "from",
] }
tracing-log = { workspace = true }
log = { workspace = true }
