[package]
name = "opensovd-client"
description = "Opensovd core"
readme = "README.md"

edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[features]
default = []
tracing = ["opensovd-tracing/tracing", "dep:tracing"]

[dependencies]
serde = { workspace = true }
opensovd-tracing = { workspace = true }
tracing = { workspace = true, optional = true }
