[package]
name = "opensovd-client"
description = "OpenSOVD client library for communicating with SOVD diagnostic servers"
readme = "README.md"

edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[features]
default = []
openssl = ["dep:openssl", "dep:hyper-openssl", "dep:tokio-openssl"]

[dependencies]
serde = { workspace = true }
opensovd-models = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true, features = ["client", "http1", "http2"] }
hyper-util = { workspace = true, features = [
    "client",
    "http1",
    "http2",
    "tokio",
] }
http-body-util = { workspace = true }
derive_more = { workspace = true, features = ["display", "from", "error"] }
url = { workspace = true }
urlencoding = { workspace = true }
openssl = { workspace = true, optional = true }
hyper-openssl = { version = "0.10", optional = true }
tokio-openssl = { version = "0.6", optional = true }


[dev-dependencies]
tokio = { workspace = true }
