[package]
name = "opensovd-diagnostic"
description = "Diagnostic entity system for SOVD"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = []
metrics = ["dep:once_cell", "dep:prometheus"]

[dependencies]
opensovd-models = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
derive_more = { workspace = true, features = ["display", "error"] }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
once_cell = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
