[package]
name = "opensovd-server"
description = "Opensovd server"
readme = "README.md"

edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[features]
default = ["tracing", "json-schema"]
tracing = ["opensovd-tracing/tracing", "dep:tracing"]
openssl = ["dep:openssl", "actix-web/openssl"]
http2 = ["actix-web/http2"]
ui = ["dep:actix-files"]
json-schema = ["dep:schemars"]

[dependencies]
serde = { workspace = true }
opensovd-tracing = { workspace = true }
tracing = { workspace = true, optional = true }
actix-web = { workspace = true }
actix-files = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
futures-core = { workspace = true }
sovd = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
schemars = { workspace = true, optional = true }
actix-embed = { version = "0.1", optional = true }

[dev-dependencies]
tokio-util = { version = "0.7.15", features = ["full"] }
actix-web = { version = "4.9.0", default-features = false, features = [
    "macros",
] }
libc = { version = "0.2", default-features = false }
