[package]
name = "opensovd-server"
description = "Opensovd server"
readme = "README.md"

edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[features]
default = ["tracing", "jsonschema-schemars"]
tracing = ["opensovd-tracing/tracing", "dep:tracing"]
openssl = ["dep:openssl", "actix-web/openssl"]
http2 = ["actix-web/http2"]
ui = ["dep:actix-files"]
jsonschema = ["dep:schemars"]
jsonschema-schemars = [
    "schemars/derive",
    "opensovd-models/jsonschema-schemars",
    "jsonschema",
]

[dependencies]
serde = { workspace = true }
opensovd-diagnostic = { workspace = true }
opensovd-tracing = { workspace = true }
tracing = { workspace = true, optional = true }
actix-web = { workspace = true }
actix-files = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
futures-core = { workspace = true }
opensovd-models = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
derive_more = { workspace = true, features = [
    "display",
    "from",
    "error",
    "debug",
] }
http = { workspace = true }
schemars = { workspace = true, optional = true }
