[package]
name = "opensovd-tracing"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
tracing = { workspace = true, optional = true }
