# SPDX-FileCopyrightText: Copyright Liebherr-Digital Development Center GmbH
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sovd-diagnostic"
description = "Diagnostic entity system for SOVD"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = []
jsonschema-schemars = ["dep:schemars"]

[dependencies]
sovd-models = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "debug", "from"] }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
toml = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
