# SPDX-FileCopyrightText: Copyright Liebherr-Digital Development Center GmbH
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sovd-server"
description = "SOVD server"
readme = "README.md"

edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
authors = { workspace = true }


[features]
default = ["jsonschema-schemars"]
openssl = ["dep:openssl", "actix-web/openssl"]
http2 = ["actix-web/http2"]
ui = ["dep:actix-files"]
jsonschema = ["dep:schemars"]
jsonschema-schemars = [
    "schemars/derive",
    "sovd-models/jsonschema-schemars",
    "jsonschema",
]

[dependencies]
serde = { workspace = true }
sovd-diagnostic = { workspace = true }
tracing = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
futures-core = { workspace = true }
sovd-models = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
derive_more = { workspace = true, features = [
    "display",
    "from",
    "error",
    "debug",
] }
http = { workspace = true }
schemars = { workspace = true, optional = true }
jsonwebtoken = { workspace = true }
awc = { workspace = true }
uriparse = { workspace = true }
actix-multipart = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
